--- a/src/template.html
+++ b/src/template.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BattleShip</title>
-</head>
-<body>
-    <h1>Whatever</h1>
-</body>
+  </head>
+  <body>
+    <nav class="navigation">
+      <div class="title">
+        <p>BattleShip</p>
+        <p>Place your ships</p>
+      </div>
+      <div class="randomize">
+        <a href="#">Randomize</a>
+      </div>
+      <div class="reset">
+        <a href="#">Reset</a>
+      </div>
+    </nav>
+    
+  </body>
 </html>
