--- a/src/template.html
+++ b/src/template.html
@@ -8,16 +8,35 @@
   <body>
     <nav class="navigation">
       <div class="title">
-        <p>BattleShip</p>
+        <p class="title-battleship">BattleShip</p>
         <p>Place your ships</p>
       </div>
       <div class="randomize">
-        <a href="#">Randomize</a>
+        <p>Randomize</p>
       </div>
       <div class="reset">
-        <a href="#">Reset</a>
+        <p>Reset</p>
       </div>
     </nav>
-    
+    <div class="start-section">
+      <div class="ships">
+        <div class="carrier"></div>
+        <div class="battleship"></div>
+        <div class="cruiser"></div>
+        <div class="submarine"></div>
+        <div class="destroyer"></div>
+      </div>
+      <div class="board">
+
+      </div>
+    </div>
+    <div class="game-section">
+      <div class="board">
+
+      </div>
+      <div class="computer-board"> 
+
+      </div>
+    </div>
   </body>
 </html>
