Add styles and markup

--- a/src/template.html
+++ b/src/template.html
@@ -19,24 +19,23 @@
       </div>
     </nav>
     <div class="start-section">
-      <div class="ships">
-        <div class="carrier"></div>
-        <div class="battleship"></div>
-        <div class="cruiser"></div>
-        <div class="submarine"></div>
-        <div class="destroyer"></div>
+      <div class="place-ships">
+        <div class="ships-title">
+          <p>Ships</p>
+        </div>
+        <div class="ships">
+          <div class="carrier" draggable="true"></div>
+          <div class="battleship" draggable="true"></div>
+          <div class="cruiser" draggable="true"></div>
+          <div class="submarine" draggable="true"></div>
+          <div class="destroyer" draggable="true"></div>
+        </div>
       </div>
-      <div class="board">
-
-      </div>
+      <div class="board"></div>
     </div>
     <div class="game-section">
-      <div class="board">
-
-      </div>
-      <div class="computer-board"> 
-
-      </div>
+      <div class="board"></div>
+      <div class="computer-board"></div>
     </div>
   </body>
 </html>
