Add markup and styles

--- a/src/template.html
+++ b/src/template.html
@@ -24,14 +24,19 @@
           <p>Ships</p>
         </div>
         <div class="ships">
-          <div class="carrier" draggable="true"></div>
-          <div class="battleship" draggable="true"></div>
-          <div class="cruiser" draggable="true"></div>
-          <div class="submarine" draggable="true"></div>
-          <div class="destroyer" draggable="true"></div>
+          <div class="carrier" draggable="true" title="carrier"></div>
+          <div class="battleship" draggable="true" title="battleship"></div>
+          <div class="cruiser" draggable="true" title="cruiser"></div>
+          <div class="submarine" draggable="true" title="submarine"></div>
+          <div class="destroyer" draggable="true" title="destroyer"></div>
         </div>
       </div>
-      <div class="board"></div>
+      <div class="initial-board">
+        <div class="board-title">
+          <p>Board</p>
+        </div>
+        <div class="game-board"></div>
+      </div>
     </div>
     <div class="game-section">
       <div class="board"></div>
