--- a/src/template.html
+++ b/src/template.html
@@ -20,7 +20,7 @@
     </nav>
     <div class="start-section">
       <div class="place-ships">
-        <button>Axis: X</button>
+        <button class="axis">Axis: X</button>
       </div>
       <div class="game-board"></div>
     </div>
@@ -33,6 +33,10 @@
         <div class="computer-title"><p>Computer's board:</p></div>
         <div class="computer-board"></div>
       </div>
+    </div>
+    <div class="conclusion-section">
+      <p class="conclusion-text">test</p>
+      <button class="home-screen">Go back → </button>
     </div>
   </body>
 </html>
